# nova

./: CMakeLists.txt  main.cpp  main.cu  setup.sh
source/: application.h  cuda.h  debug.h  framebuffer.h  kernel.cu  kernel.h  ndebug.h  ntime.h
